style.css
/* ... */
@media only screen and (max-width: 480px) {

    .fullleft-logo img {
        max-width: 150px;
    }
    .fullleft{
        background-image: url(img/bcmobile.png);
        background-size: cover;
        height: inherit;
    }
    .dateheader {
        font-size: 18px;
        margin-bottom: 7px;
    }
    .fullright{
        display: none;
    }
    .fullright a.ensavoirplus {
        bottom: 5px;
        right: -64px !important;
    }
    .fullleft-buttonmid{
        display: block;
        max-width: 70%;
        margin-top: 90px;
    }
    .fullleft-buttonmid a:last-child {
        
    margin-top: 34px;
    margin-left: 0;
		    width: 100%;

    }
	.fullleft-middle{
		margin-top: 20px;
	}
    header h1{
        font-size: 33px;
    line-height: 40px;

    }
    p {
        font-size: 18px;
        line-height: 42px;
    }
    .backgroundsombre .col:nth-child(2):after {
        display: none;
    }
    .backgroundsombre .col:after {
        position: absolute;
    content: '';
    width: 75%;
    top: -35px;
    height: 5px;
    background: #FCFF4F;
    margin: 0 auto;
    left: 0;
    right: 0;
    }
    .backgroundsombre .col{
        margin-top: 20px;
        margin-bottom: 20px;
    }
    .backgroundsombre p{
        font-size: 1.9em;
    }
    li{
        font-size: 18px;
    }
    .colabsolute img{
        width: 300px;
    }
    .h2, h2 {
        font-size: 1.7rem !important;
    }
    .stands img {
        max-width: 240px;
    }
    li {
        line-height: 34px; 
    }
    li::before {
        top: 6px;
    }
    .stands p.italic {   
        line-height: 19px;
        font-size: 14px;
        padding-top: 15px;
    }
    footer .row{
        flex-direction: column;
    }
    .interresse .col-7 p{
        font-size: 16px;
    }
    .interresse .col-4{
        background-position: center center;
    }
    .stands .row{
        width: 100%;
        margin: 0 auto;
    }
    .intern .header img {
        width: 180px;
    }
    .intern .row .col-8{
        display: none;
    }
    .intern .header{height: 25vh;}
    .titreart{height: 40vh;}
    .language{
        right: 20px;
    }
    .en{
        background-color: #FCFF4F;
        padding: 5px;
        color: #2B2C2F ;
        margin-right: 10px;
        font-size: 12px;
    }
    .fr{
        background-color: #2B2C2F;
        padding: 5px;
        color: #ffffff;
        font-size: 12px;
    }
	.stands ul{
		    padding-left: 20px;
	}
	.stands h3{
		z-index: 99;
	}
}

